--- a/style/style.css
+++ b/style/style.css
@@ -743,3 +743,160 @@ body {
 .social-list__item + .social-list__item {
     margin-left: 30px;
 }
+.breadcrumbs {
+    margin-bottom: 40px;
+}
+.breadcrumbs__list-item {
+    display: inline-block;
+    padding-right: 16px;
+    margin-right: 10px;
+    position: relative;
+    line-height: 18px;
+    font-size: 15px;
+    color: #C4C4C4;
+}
+.breadcrumbs__list-item::after {
+    content: ''; 
+    position: absolute;
+    right: 0;
+    background-image: url('../images/link-arrow.svg');
+    width: 6px;
+    height: 9px;
+    bottom: 5px;
+}
+.breadcrumbs__list-item:last-child::after{
+    display: none;
+}
+.catalog {
+    margin-bottom: 100px;
+
+}
+.catalog__title {
+    font-weight: bold;
+    font-family: 'SFProDisplay-Bold', sans-serif;
+    font-size: 30px;
+    line-height: 36px;
+    margin-bottom: 26px;
+}
+
+.catalog__filter {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 50px;
+}
+
+.catalog__filter-items button{
+    font-size: 14px;
+    line-height: 17px;
+    opacity: 0.7;
+    background: #F0F0F4;
+    border-radius: 3px;
+    border: none;
+    padding: 5px 22px;
+    cursor: pointer;
+}
+
+.catalog__filter-items button + button {
+    margin-left: 8px; 
+    cursor: pointer;
+}
+
+.catalog__filter-btn button{
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    margin: 0;
+    padding: 0;
+}
+
+.catalog__filter-btn button + button {
+    margin-left: 10px;
+}
+
+button.catalog__filter-btngrid {
+    
+}
+
+button.catalog__filter-btnline {
+
+}
+
+.catalog__inner {
+    display: flex;
+}
+
+.catalog__inner-aside {
+    min-width: 290px;
+    margin-right: 10px;
+}
+
+.catalog__inner-list {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+}
+
+.catalog__inner-list .product-item__wrapper {
+    margin-bottom: 30px;
+}   
+
+.product-item__img {
+    max-width: 100%;
+}
+
+.pagination {
+    width: 100%;
+    margin-top: 70px;
+}
+
+.pagination-list {
+    display: flex;
+    justify-content: center;
+}
+
+.paginatoin-list__item {
+    padding: 6px 12px;
+    border: 2px solid transparent;
+    margin: 0 4px;
+    line-height: 22px;
+    font-size: 18px;
+    color: #C4C4C4;
+}
+
+.paginatoin-list__item.active {
+    border: 2px solid #1C62CD;
+    color: #1C62CD;
+
+}
+
+.paginatoin-list__item a {
+    display: block;
+}
+
+.aside-filter__tabs {
+    display: flex;
+    justify-content: space-between;
+}
+
+.aside-filter__tab {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    letter-spacing: 0.09em;
+    text-transform: uppercase;
+    color: #C4C4C4;
+    width: 50%;
+}
+
+.aside-filter__tab.tab--active {
+    color: #2F3035;
+    font-weight: bold;
+    font-family: 'SFProDisplay-Bold', sans-serif;
+} 
+
+.aside-filter__tab.tab--active span {
+    display: inline-block;
+    padding-bottom: 5px;
+    border-bottom: 2px solid #1C62CD;
+}
